--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "urls": [
-    ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"]
+    ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"],
+    ["ledapp/clients/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/clients/__init__.py"],
+    ["ledapp/clients/network_client.py", "github:jklz-dev/micropython-led-app/ledapp/clients/network_client.py"],
+    ["ledapp/drivers/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/drivers/__init__.py"],
+    ["ledapp/drivers/led/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/drivers/led/__init__.py"],
+    ["ledapp/drivers/led/simple_led.py", "github:jklz-dev/micropython-led-app/ledapp/drivers/led/simple_led.py"],
+    ["ledapp/services/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/services/__init__.py"],
+    ["ledapp/services/config/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/services/config/__init__.py"],
+    ["ledapp/services/config/config_handler.py", "github:jklz-dev/micropython-led-app/ledapp/services/config/config_handler.py"],
+    ["ledapp/services/pixel/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/drivers/pixel/__init__.py"]
   ],
   "deps": [
 
