--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "urls": [
-    ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"]
+    ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"],
+    ["ledapp/configs.py", "github:jklz-dev/micropython-led-app/ledapp/configs.py"]
   ],
   "deps": [
 
   ],
-  "version": "0.0.4"
+  "version": "0.0.5"
 }
