fix package includes

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"],
     ["ledapp/configs.py", "github:jklz-dev/micropython-led-app/ledapp/configs.py"],
     ["ledapp/pixel.py", "github:jklz-dev/micropython-led-app/ledapp/pixel.py"],
+    ["ledapp/mqtt.py", "github:jklz-dev/micropython-led-app/ledapp/mqtt.py"],
     ["ledapp/display_demo.py", "github:jklz-dev/micropython-led-app/ledapp/display_demo.py"]
   ],
   "deps": [
     ["umqtt.simple",  "latest"]
   ],
-  "version": "0.2.3"
+  "version": "0.3.0"
 }
