--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     ["ledapp/configs.py", "github:jklz-dev/micropython-led-app/ledapp/configs.py"],
     ["ledapp/pixel.py", "github:jklz-dev/micropython-led-app/ledapp/pixel.py"],
     ["ledapp/mqtt.py", "github:jklz-dev/micropython-led-app/ledapp/mqtt.py"],
+    ["ledapp/async_provider.py", "github:jklz-dev/micropython-led-app/ledapp/async_provider.py"],
     ["ledapp/display_demo.py", "github:jklz-dev/micropython-led-app/ledapp/display_demo.py"]
   ],
   "deps": [
     ["umqtt.simple",  "latest"]
   ],
-  "version": "0.4.6"
+  "version": "0.4.7"
 }
