--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
     ["ledapp/__init__.py", "github:jklz-dev/micropython-led-app/ledapp/__init__.py"],
     ["ledapp/configs.py", "github:jklz-dev/micropython-led-app/ledapp/configs.py"],
     ["ledapp/pixel.py", "github:jklz-dev/micropython-led-app/ledapp/pixel.py"],
-    ["ledapp/mqtt.py", "github:jklz-dev/micropython-led-app/ledapp/mqtt.py"],
-    ["ledapp/async_provider.py", "github:jklz-dev/micropython-led-app/ledapp/async_provider.py"],
+    ["ledapp/mqtt_as.py", "github:jklz-dev/micropython-led-app/ledapp/mqtt_as.py"],
     ["ledapp/display_demo.py", "github:jklz-dev/micropython-led-app/ledapp/display_demo.py"]
   ],
   "deps": [
     ["umqtt.simple",  "latest"]
   ],
-  "version": "0.4.9"
+  "version": "0.4.10"
 }
